syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/codifierr/go-examples/grpc/proto";

message MessagePayload{
    string id=1;
    string message=2;
    google.protobuf.Timestamp time =3;

}

message Ack{
    string id = 1;
    string trace_id = 2;
    string message = 3;
}

service MessageProcessor {
    rpc ProcessMessages (MessagePayload) returns (Ack);
}
